<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3A3A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CurrentDate"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contextButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/refresh"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/refresh" />

    <Button
        android:id="@+id/previousDay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/previousDay"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/contextButton"
        app:layout_constraintTop_toTopOf="@+id/contextButton" />

    <Button
        android:id="@+id/nextDay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/nextDay"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/contextButton"
        app:layout_constraintTop_toTopOf="@+id/contextButton" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/contextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentDate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/gameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="4dp"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>